--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@ O Java Script é uma linguagem de programação.
 <footer>
 <p>Projeto desenvolvido pela Aluna Ana Julia.</p>
 </footer>
-    
+ <script>app.js</script>
+ <script>perguntas.js</script>
 </body>
 </html>
